# DiscordBot

./: Dockerfile  README.md  config.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: pylint.yml
alembic/: env.py
alembic/versions/: e0b36a055fb6_intial_database.py  e51463fc1bb8_add_server_id_to_song_requests.py
bot/: config.py  logger.py  main.py
bot/cogs/: utlis.py
bot/cogs/deutschebahn/: deutschebahn_cog.py  station.py
bot/cogs/deutschebahn/rs_api/: api.py  model.py
bot/cogs/music/: music_cog.py  player.py
bot/cogs/music/online/: README.md  youtube_dl.py
bot/cogs/mvg/: mvg_cog.py
bot/cogs/shared/: schemas.py
bot/database/: database.py
bot/database/models/: deutschebahn.py  musicplayer.py  mvg.py
cogs/: utlis.py
cogs/deutschebahn/: deutschebahn_cog.py  station.py
cogs/deutschebahn/RSAPI/: api.py  model.py
cogs/deutschebahn/rs_api/: api.py  model.py
cogs/music/: music_cog.py  player.py
cogs/music/offline/: README.md
cogs/music/online/: youtube_dl.py
cogs/mvg/: mvg_cog.py
config/: config.yml
database/: README.md  database.py
database/tabels/: deutschebahn.py  musicplayer.py  mvg.py
