[tool.poetry]
name = "discordbot"
version = "0.1.0"
description = ""
authors = ["Lukas Mahr <lukas@yousuckatprogramming.de>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
discord-py = {extras = ["voice"], version = "^2.1.0"}
youtube-dl = "^2021.12.17"
pyyaml = "^6.0"
sqlalchemy = "^1.4.44"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
